--- a/style.css
+++ b/style.css
@@ -35,4 +35,11 @@ body{background-color:dodgerblue;text-align: center;}
   padding:3px 10px;
   cursor:pointer;
 }
-
+#date{
+  display: inline-block;
+  background-color: white;
+  border: none;
+  border-radius: 15px;
+  padding: 10px 15px;
+  text-align: center;
+}
