--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{background-color:dodgerblue;text-align: center;}
   cursor:pointer;
 }
 #date{
-  display: inline-block;
+  display:block;
   background-color: white;
   border: none;
   border-radius: 15px;
