--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{background-color:dodgerblue;text-align: center;}
   cursor:pointer;
 }
 #date{
+  display: inline-block;
   background-color: white;
   border: none;
   border-radius: 15px;
