--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{background-color:dodgerblue;text-align: center;}
+body{background-color:dodgerblue;text-align: center; display: inline-block;}
 .main-div{
   display: flex;
   justify-content: space-around;
