--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-body{background-color:dodgerblue;text-align: center; display: inline-block;}
+body{background-color:dodgerblue;text-align: center; display: block;}
 .main-div{
-  display: flex;
-  justify-content: space-around;
+  display: block;
 }
 .home-div{
   
